--- a/src/app/main/contract/shared/model/sample-contract/sample-contract.component.html
+++ b/src/app/main/contract/shared/model/sample-contract/sample-contract.component.html
@@ -46,6 +46,22 @@
                         (ngModelChange)="changePositionSign($event, 'text_attribute_name', 'text')">
                 </div>
 
+                <!-- <div class="name-text" *ngIf="isEnableText">
+                    <label class="label-require">{{'attribute.text.type' | translate}}: *</label>
+                    <input id="text-input-element" type="text" [ngModel]="this.objSignInfo.text_attribute_name"
+                        (ngModelChange)="changePositionSign($event, 'text_attribute_name', 'text')">
+                </div> -->
+                <div class="sign-unit-select" *ngIf="isEnableText">
+                    <label class="label-require">{{'attribute.text.type' | translate}}: *</label>
+                    <select class="form-select" id="select-dropdown" aria-label="Default select example"
+                        (change)="changePositionSign($event, 'text_type', 'text')" [disabled]="isEnableSelect">
+                        <option value="" hidden>{{'choose.text.type'| translate}}
+                        </option>
+                        <option *ngFor="let d of this.list_text_type, let i = index" [selected]="d.selected"
+                            value="{{d.id}}" [disabled]="d.is_disable">{{d.name}}</option>
+                    </select>
+                </div>
+
                 <div class="sign-unit-select">
                     <label class="label-require">{{isEnableText || isChangeText ? ('user.import' | translate) : ('user.sign' | translate)}}: *</label>
                     <select class="form-select" id="select-dropdown" aria-label="Default select example"
