--- a/src/app/main/customer/customer.component.html
+++ b/src/app/main/customer/customer.component.html
@@ -27,7 +27,7 @@
   <p-table [value]="list" [paginator]="true" [rows]="15" id="table" [autoLayout]="true">
     <ng-template pTemplate="header" let-columns>
       <tr>
-          <th *ngFor="let col of cols" [style]='col.style'>
+          <th *ngFor="let col of cols" [style]='col.style' [ngClass]="col.class">
             {{col.header | translate}}
           </th>
       </tr>
