--- a/src/app/main/report/report-soon-expire/report-soon-expire.component.html
+++ b/src/app/main/report/report-soon-expire/report-soon-expire.component.html
@@ -11,6 +11,7 @@
                 filterBy="name"  
                 [droppable]="true" 
                 [options]="listOrgCombobox"
+                (onNodeSelect)="changeOrg()"
             >
           </p-treeSelect>
             </div>
@@ -18,7 +19,7 @@
 
         <!--Ngày tạo hợp đồng-->
         <div class="col-md-2">
-            <div>{{ 'create-date' | translate}} <span style="color: red"> *</span></div>
+            <div>{{ 'create-date.soon' | translate}} <span style="color: red"> *</span></div>
             <div class="input-line">
                 <p-calendar selectionMode="range" [readonlyInput]="true" [(ngModel)]="date" [showIcon]="true" dateFormat="dd/mm/yy"
                           
@@ -43,6 +44,14 @@
             </div>
         </div>
 
+        <div class="col-md-2">
+            <div>{{'contract.type' | translate}}</div>
+            <div class="input-line">
+              <p-dropdown #typeContract optionValue="name" [(ngModel)]="type_id" placeholder="{{'choose.contract.type' | translate}}" [showClear]="true" [filter]="true" filterBy="name" [options]="typeList" optionLabel="name" >
+            </p-dropdown>
+            </div>
+        </div>
+
         <!--Button-->
         <div class="col-md-6 btn_search">
             <button class="btn btn-lg btn-block btn_submit" (click)="export(false)">{{'btn.report' | translate }}</button>
@@ -52,7 +61,7 @@
 
     <!--Bảng dữ liệu-->
     <div class="row" style="padding-top: 20px;">
-        <p-table [value]="list" [paginator]="true" [rows]="15" id="table" [autoLayout]="true">
+        <p-table #dt [value]="list" [paginator]="true" [rows]="15" id="table" [autoLayout]="true">
 
             <!--header-->
             <ng-template pTemplate="header">
@@ -73,15 +82,15 @@
 
                     <ng-container *ngIf="row > 0">
                         <td>{{list.name}}</td>
-                        <td>{{list.typeName}}</td>
                         <td>{{list.contractNo}}</td>
-                        <td>{{list.contractExpireTime}}</td>
+                        <td>{{list.typeName}}</td>
                         <td>{{list.participants[0].name}}</td>
                         <td *ngFor="let i of Arr(maxParticipants - 1).fill(1)">
                             <span *ngIf="list.participants[i]">
                                 {{ list.participants[i].name }}
                             </span>
                         </td>
+                        <td>{{list.contractExpireTime}}</td>
                     </ng-container>
                 </tr>
             </ng-template>
