--- a/src/app/main/contract/contract.component.html
+++ b/src/app/main/contract/contract.component.html
@@ -637,7 +637,7 @@
             <div class="contract_footer">
                 <div class="footer_title"></div>
                 <div class="footer_pagination">
-                    <pagination-controls *ngIf="pageTotal > 0;" (pageChange)="p=$event; getContractList()"
+                    <pagination-controls *ngIf="pageTotal > 0;" (pageChange)="p=$event; downloadMany()"
                         previousLabel="" nextLabel=""></pagination-controls>
                 </div>
                 <div class="footer_page_number">{{'chart.number' | translate}}: {{pageStart}} - {{pageEnd}} /
