bỏ cmt ảnh con dấu

--- a/src/app/main/user/add-user/add-user.component.html
+++ b/src/app/main/user/add-user/add-user.component.html
@@ -95,7 +95,7 @@
         <div class="label-header">{{'sign.information' | translate}}</div>
         <div class="content-body">
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-3">
                     <div class="label-header">
                         {{'sign.file-image' | translate}}
                     </div>
@@ -117,7 +117,7 @@
                     </div>
                 </div>
 
-                <!-- <div class="col-md-3">
+                <div class="col-md-3">
                     <div class="label-header">
                         {{'sign.file-image.mark' | translate}}
                     </div>
@@ -137,9 +137,9 @@
                             <img class="hidden_img" (click)="addFileAttach('mark')" src="assets/img/img-icon.svg" width="30" height="30" />
                         </div>
                     </div>
-                </div> -->
+                </div>
 
-                <div class="col-md-4">
+                <div class="col-md-3">
                     <div class="label-header">
                         <div class="row" style="padding: 0 10px;">
                             <div class="col-md-12">
@@ -170,7 +170,7 @@
                     </div>
                 </div>
 
-                <div class="col-md-4">
+                <div class="col-md-3">
                     <div class="label-header">
                         <div class="row" style="padding: 0 10px;">
                             <div class="col-md-12">
