--- a/src/app/main/user/detail-user/detail-user.component.html
+++ b/src/app/main/user/detail-user/detail-user.component.html
@@ -55,7 +55,7 @@
         <div class="label-header">{{'sign.information' | translate}}</div>
         <div class="content-body">
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-3">
                     <div class="label-header">
                         {{'sign.file-image' | translate}}
                     </div>
@@ -75,7 +75,7 @@
                     </div>
                 </div>
                 
-                <!-- <div class="col-md-3">
+                <div class="col-md-3">
                     <div class="label-header">
                         {{'sign.file-image.mark' | translate}}
                     </div>
@@ -93,11 +93,11 @@
                             <img *ngIf="imgSignPCSelectMark" [src]="imgSignPCSelectMark" alt="" style="display: block;margin: 10px auto;max-height: 30vh;max-width: 100%;">
                         </div>
                     </div>
-                </div> -->
+                </div>
 
                 
 
-                <div class="col-md-4">
+                <div class="col-md-3">
                     <div class="label-header">
                         <div class="row" style="padding: 0 10px;">
                             <div class="col-md-12">
@@ -125,7 +125,7 @@
                     </div>
                 </div>
 
-                <div class="col-md-4">
+                <div class="col-md-3">
                     <div class="label-header">
                         <div class="row" style="padding: 0 10px;">
                             <div class="col-md-12">
