--- a/src/app/main/report/report-detail/report-detail.component.html
+++ b/src/app/main/report/report-detail/report-detail.component.html
@@ -84,7 +84,7 @@
                         <td class="row-word">{{list.name}}</td>
                         <td class="row-word">{{list.typeName}}</td>
                         <td class="row-word">{{list.contractNo}}</td>
-                        <td class="row-word">{{list.code}}</td>
+                        <td class="row-word">{{list.contractUid}}</td>
                         <td class="row-word">{{list.refId}}</td>
                         <td class="row-word">{{this.convertTime(list.createdAt)}}</td>
                         <td class="row-word">{{this.convertTime(list.signTime)}}</td>
