--- a/src/app/main/contract-template/shared/model/sample-contract/sample-contract.component.html
+++ b/src/app/main/contract-template/shared/model/sample-contract/sample-contract.component.html
@@ -39,7 +39,7 @@
                 </div>
 
                 <!--Option chọn loại text-->
-                <div class="sign-unit-select" *ngIf="isEnableText">
+                <!-- <div class="sign-unit-select" *ngIf="isEnableText">
                     <label class="label-require">{{'attribute.text.type' | translate}}: *</label>
                     <select class="form-select" id="select-dropdown" aria-label="Default select example"
                         (change)="changePositionSign($event, 'text_type', 'text')" [disabled]="isEnableSelect">
@@ -48,7 +48,7 @@
                         <option *ngFor="let d of this.list_text_type, let i = index" [selected]="d.selected"
                             value="{{d.id}}" [disabled]="d.is_disable">{{d.name}}</option>
                     </select>
-                </div>
+                </div> -->
 
                 <!--Người ký/người nhập-->
                 <div class="sign-unit-select">
