con dấu ký nhiều

--- a/src/app/main/contract-signature/dialog/dialog-sign-many-component/dialog-sign-many-component.component.html
+++ b/src/app/main/contract-signature/dialog/dialog-sign-many-component/dialog-sign-many-component.component.html
@@ -12,7 +12,7 @@
         <div style="font-size: 14px">{{'stamp.contract.questions' | translate}}
         </div>
         <div style="padding-top: 2px;">
-          <p-dropdown [(ngModel)]="id" optionLabel="name" optionValue="id" [options]="options"></p-dropdown>
+          <p-dropdown [(ngModel)]="id" optionLabel="name" optionValue="id" [options]="options" (onChange)="onChangeForm($event)"></p-dropdown>
         </div>
       </div>
   
