--- a/src/app/main/contract-signature/contract-signature.component.html
+++ b/src/app/main/contract-signature/contract-signature.component.html
@@ -700,18 +700,7 @@
       </div>
     </div>
 
-    <!-- <div id="export-html-image" style="position: relative;">
-        <img style="position: absolute; top: 0; left: 0;z-index: 1">
-        <div style="min-height: 80px; display: flex; font-size: 9px; margin-left: 30px;z-index: 2;">
-            <div style="color: #4FC123; background-size: 40px 40px">
-                <div style="z-index: 2;text-align: left;">{{'user.sign-type' | translate}}: {{ 'sign_by_token'| translate}}</div>
-                <div style="z-index: 2;text-align: left;">{{'sign.by' | translate}}: {{nameCompany}}</div>
-                <div style="z-index: 2;text-align: left;">{{'sign.day' | translate }}: {{isDateTime | date: 'dd/MM/YYYY HH:mm'}}</div>
-            </div>
-        </div>
-    </div> -->
-
-    <div id="export-html-image" style="position: relative">
+    <!-- <div id="export-html-image" style="position: relative">
         <img style="position: absolute; top: -5px; left: 0; width: 50%; z-index: -10" [src]="srcMark" alt="logo">
         <div style="min-height: 80px; display: flex; font-size: 9px; margin-left: 30px;z-index: 2;">
             <div class="signature-content" style="color: #4FC123; background-size: 40px 40px">
@@ -720,9 +709,17 @@
                 <div style="text-align: left;">{{'sign.day' | translate }}: {{isDateTime | date: 'dd/MM/YYYY HH:mm'}}</div>
             </div>
         </div>
+    </div> -->
+
+    <div id="export-html-image" style="width: 155px;min-height: 80px; display: flex; font-size: 9px; background-color: white;">
+        <img style="width: 30px" src="assets/img/tick_signature.svg" alt="duongdt.vn">
+        <div class="signature-content" style="color: #4FC123; background:url('assets/img/chu_e_opacity.png') no-repeat center; background-size: 40px 40px">
+            <div style="z-index: 2;text-align: left;">{{'user.sign-type' | translate}}: {{ 'sign_by_token'| translate}}</div>
+            <div style="z-index: 2;text-align: left;">{{'sign.by' | translate}}: {{nameCompany}}</div>
+            <div style="z-index: 2;text-align: left;">{{'sign.day' | translate}}: {{isDateTime | date: 'dd/MM/YYYY HH:mm'}}</div>
+        </div>
     </div>
     
-  
     <div id="export-html-hsm"  style="min-height: 80px;display: flex; font-size: 9px">
       <img style="width: 30px"  src="assets/img/tick_signature.svg" alt="duongdt.vn">
       <div style="color: #4FC123; background:url('assets/img/chu_e_opacity.png') no-repeat center; background-size: 40px 40px">
@@ -732,13 +729,26 @@
       </div>
     </div>
 
-    <div id="export-html-hsm-image" style="position: relative">
+    <!-- <div id="export-html-hsm-image" style="position: relative">
         <img style="position: absolute; top: -5px; left: 0; width: 50%; z-index: -10" [src]="srcMark" alt="logo">
         <div style="min-height: 80px; display: flex; font-size: 9px; margin-left: 30px;z-index: 2;">
             <div class="signature-content" style="color: #4FC123; background-size: 40px 40px">
                 <span style="text-align: left; white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">{{'user.sign-type' | translate}}: {{'sign_by_hsm' | translate}}</span>
                 <span style="text-align: left; white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">{{'tax_code' | translate}}: {{nameCompany}}</span>
                 <span style="text-align: left;white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">{{'sign.day' | translate}}: {{isDateTime | date: 'dd/MM/YYYY HH:mm'}}</span>
+            </div>
+        </div>
+    </div> -->
+
+    <div class="signature-container" id="export-html-hsm-image" style="width: 250px;min-height: 80px; display: flex; font-size: 9px;max-width: 300px">
+        <div style="position: relative;">
+            <img [src]="this.srcMark" style="width: 70%; height: 100%;z-index: 1">
+        </div>
+        <div class="signature-content" style="color: #4FC123; background-size: 40px 40px; display: flex; justify-content: space-between;align-items: center; width: 100%;">
+            <div style="width: 165px;">
+                <div style="z-index: 2;text-align: left;">{{'user.sign-type' | translate}}: {{'sign_by_hsm' | translate}}</div>
+                <div style="z-index: 2;text-align: left;">{{'tax_code' | translate}}: {{nameCompany}</div>
+                <div style="z-index: 2;text-align: left;">{{'sign.day' | translate}}: {{isDateTime | date: 'dd/MM/YYYY HH:mm'}}</div>
             </div>
         </div>
     </div>
