--- a/src/app/main/report/report-detail/report-detail.component.html
+++ b/src/app/main/report/report-detail/report-detail.component.html
@@ -99,7 +99,7 @@
                         <td class="row-word">{{this.getName(list,0,'sign')}}</td>
                         <td class="row-word">{{this.getName(list,0,'doc')}}</td>
 
-                        <ng-container *ngFor="let i of Arr(maxParticipants - 1).fill(1)">
+                        <ng-container *ngFor="let i of getNumberArray(this.maxParticipants - 1)">
                             <td class="row-word">{{this.getValue(list,i,'type')}}</td>
                             <td class="row-word">{{this.getValue(list,i,'name')}}</td>
                             <td class="row-word">{{this.getName(list,i,'coor')}}</td> 
