--- a/src/app/main/report/report-soon-expire/report-soon-expire.component.html
+++ b/src/app/main/report/report-soon-expire/report-soon-expire.component.html
@@ -47,7 +47,7 @@
         <div class="col-md-2">
             <div>{{'contract.type' | translate}}</div>
             <div class="input-line">
-              <p-dropdown #typeContract optionValue="name" [(ngModel)]="type_id" placeholder="{{'choose.contract.type' | translate}}" [showClear]="true" [filter]="true" filterBy="name" [options]="typeList" optionLabel="name" >
+              <p-dropdown #typeContract optionValue="name" [(ngModel)]="type_id" placeholder="{{'all' | translate}}" [showClear]="true" [filter]="true" filterBy="name" [options]="typeList" optionLabel="name" >
             </p-dropdown>
             </div>
         </div>
@@ -85,7 +85,7 @@
                         <td>{{list.contractNo}}</td>
                         <td>{{list.typeName}}</td>
                         <td>{{list.participants[0].name}}</td>
-                        <td *ngFor="let i of Arr(maxParticipants - 1).fill(1)">
+                        <td *ngFor="let i of getNumberArray(this.maxParticipants - 1)">
                             <span *ngIf="list.participants[i]">
                                 {{ list.participants[i].name }}
                             </span>
