--- a/src/app/main/report/contract-number-follow-type/contract-number-follow-type.component.html
+++ b/src/app/main/report/contract-number-follow-type/contract-number-follow-type.component.html
@@ -65,22 +65,22 @@
             </ng-template>
 
             <ng-template pTemplate="body" let-list let-row="rowIndex">
-                <ng-container style="background-color: #EEF7FF;" *ngIf="row == 0">
-                    <td style="font-style: normal;font-weight: 800;font-size: 13px;">{{this.org}}</td>
-                    <td *ngFor="let i of Arr(6).fill(1)"></td>
-                </ng-container>
+                <tr>
+                    <ng-container style="background-color: #EEF7FF;" *ngIf="row == 0">
+                        <td style="font-style: normal;font-weight: 800;font-size: 13px;">{{this.org}}</td>
+                        <td *ngFor="let i of Arr(6).fill(1)"></td>
+                    </ng-container>
 
-                <ng-container *ngIf="row > 0">
-                    <tr>
-                        <td>{{list.name}}</td>
-                        <td>{{list.value.total}}</td>
-                        <td>{{list.value.processed}}</td>
-                        <td>{{list.value.processing}}</td>
-                        <td>{{list.value.canceled}}</td>
-                        <td>{{list.value.prepare_expires}}</td>
-                        <td>{{list.value.expired}}</td>
-                    </tr>
-                </ng-container>
+                    <ng-container *ngIf="row > 0">
+                            <td>{{list.name}}</td>
+                            <td>{{list.value.total}}</td>
+                            <td>{{list.value.processed}}</td>
+                            <td>{{list.value.processing}}</td>
+                            <td>{{list.value.canceled}}</td>
+                            <td>{{list.value.prepare_expires}}</td>
+                            <td>{{list.value.expired}}</td>
+                    </ng-container>
+                </tr>
             </ng-template>
 
             <ng-template pTemplate="footer">
@@ -95,11 +95,11 @@
                 </tr>
             </ng-template>
 
-            <ng-template pTemplate="paginatorleft" let-state>
-                <span style="color: white !important;">{{'chart.number' | translate}}: {{(state.totalRecords <= 0 && state.fisrt <= 0) ? state.first : state.first+1}} - {{(state.first+state.rows)> state.totalRecords ? state.totalRecords : state.first+state.rows}} / {{state.totalRecords}}</span>
-            </ng-template>
+            <ng-template  pTemplate="paginatorleft" let-state>
+                <span style="color: white !important;">{{'chart.number' | translate}}: {{state.first <= 0 && state.totalRecords <= 1? 0:state.first + 1}} - {{(state.first+state.rows)> state.totalRecords ? (state.totalRecords > 0 ? state.totalRecords - 1 : 0) : state.first+state.rows - 1}} / {{state.totalRecords > 0 ? state.totalRecords - 1 : 0}}</span>
+              </ng-template>
             <ng-template pTemplate="paginatorright" let-state>
-                <span style="color: #0160AE !important;">{{'chart.number' | translate}}: {{(state.totalRecords <= 0 && state.fisrt <= 0) ? state.first : state.first+1}} - {{(state.first+state.rows)> state.totalRecords ? state.totalRecords : state.first+state.rows}} / {{state.totalRecords}}</span>
+                <span style="color: #0160AE !important;">{{'chart.number' | translate}}: {{state.first <= 0 && state.totalRecords <= 1? 0:state.first + 1}} - {{(state.first+state.rows)> state.totalRecords ?(state.totalRecords > 0 ? state.totalRecords - 1 : 0) : state.first+state.rows - 1}} / {{state.totalRecords > 0 ? state.totalRecords - 1 : 0}}</span>
             </ng-template>
         </p-table>
     </div>
