--- a/src/app/main/report/report-contract-number-follow-status/report-contract-number-follow-status.component.html
+++ b/src/app/main/report/report-contract-number-follow-status/report-contract-number-follow-status.component.html
@@ -75,14 +75,6 @@
                 </tr>
             </ng-template>
 
-            <ng-template pTemplate="groupheader" let-list>
-                <tr pRowGroupHeader>
-                    <td>
-                        <span class="font-bold ml-2">{{"abc"}}</span>
-                    </td>
-                </tr>
-            </ng-template>
-
             <ng-template let-i="rowIndex" pTemplate="body" let-list>
 
                 <tr style="background-color: #EEF7FF;">
@@ -127,10 +119,10 @@
             </ng-template>
 
             <ng-template pTemplate="paginatorleft" let-state>
-                <span style="color: white !important;">{{'chart.number' | translate}}: {{(state.totalRecords <= 0 && state.fisrt <= 0) ? state.first : state.first+1}} - {{(state.first+state.rows)> state.totalRecords ? state.totalRecords : state.first+state.rows}} / {{state.totalRecords}}</span>
+                <span style="color: white !important;">{{'chart.number' | translate}}: {{(state.totalRecords <= 0 || state.fisrt <= 0) ? 0 : state.first+1}} - {{(state.first+state.rows)> state.totalRecords ? state.totalRecords : state.first+state.rows}} / {{state.totalRecords}}</span>
               </ng-template>
             <ng-template pTemplate="paginatorright" let-state>
-                <span style="color: #0160AE !important;">{{'chart.number' | translate}}: {{(state.totalRecords <= 0 && state.fisrt <= 0) ? state.first : state.first+1}} - {{(state.first+state.rows)> state.totalRecords ? state.totalRecords : state.first+state.rows}} / {{state.totalRecords}}</span>
+                <span style="color: #0160AE !important;">{{'chart.number' | translate}}: {{(state.totalRecords <= 0 || state.fisrt <= 0) ? 0 : state.first+1}} - {{(state.first+state.rows)> state.totalRecords ? state.totalRecords : state.first+state.rows}} / {{state.totalRecords}}</span>
             </ng-template>
         </p-table>
     </div>
