--- a/src/app/main/report/report-contract-number-follow-status/report-contract-number-follow-status.component.html
+++ b/src/app/main/report/report-contract-number-follow-status/report-contract-number-follow-status.component.html
@@ -63,7 +63,7 @@
 
     <!--Bảng dữ liệu-->
     <div class="row" style="padding-top: 20px;">
-        <p-table [value]="list" id="table" [paginator]="true" [rows]="2">
+        <p-table #dt [value]="list" id="table" [paginator]="true" [rows]="2">
 
             <!--header-->
             <ng-template pTemplate="header">
