--- a/src/app/main/report/report-detail/report-detail.component.html
+++ b/src/app/main/report/report-detail/report-detail.component.html
@@ -35,7 +35,7 @@
                     appendTo="body"
                     optionLabel="name"
                     optionValue="id" 
-                    placeholder="{{'contract.status.v2' | translate}}" 
+                    placeholder="{{'all' | translate}}" 
                     [showClear]="true"  
                     [options]="optionsStatus"
                     [(ngModel)]="contractStatus"
