format ngày hết hạn hiệu lực

--- a/src/app/main/report/report-soon-expire/report-soon-expire.component.html
+++ b/src/app/main/report/report-soon-expire/report-soon-expire.component.html
@@ -90,7 +90,7 @@
                                 {{ list.participants[i].name }}
                             </span>
                         </td>
-                        <td>{{list.contractExpireTime}}</td>
+                        <td>{{this.convertTime(list.contractExpireTime)}}</td>
                     </ng-container>
                 </tr>
             </ng-template>
