--- a/src/app/main/report/report-status-contract/report-status-contract.component.html
+++ b/src/app/main/report/report-status-contract/report-status-contract.component.html
@@ -84,13 +84,14 @@
                         <td>{{list.name}}</td>
                         <td>{{list.contractNo}}</td>
                         <td>{{list.typeName}}</td>
-                        <td>{{this.convert(list.status)}}</td>
+                        <td>{{list.organization?.name}}</td>
                         <td>{{list.participants[0].name}}</td>
                         <td *ngFor="let i of getNumberArray(this.maxParticipants - 1)">
                             <span *ngIf="list.participants[i]">
                                 {{ list.participants[i].name }}
                             </span>
                         </td>
+                        <td>{{this.convert(list.status)}}</td>
                         <td>{{list.processedUser}}</td>
                         <td>{{list.processingUser}}</td>
                         <td>{{list.notProcessedYet}}</td>
