display first dropdown false

--- a/src/app/main/report/report-detail/report-detail.component.html
+++ b/src/app/main/report/report-detail/report-detail.component.html
@@ -39,6 +39,7 @@
                     [showClear]="true"  
                     [options]="optionsStatus"
                     [(ngModel)]="contractStatus"
+                    [autoDisplayFirst]="false"
                 ></p-dropdown>
             </div>
         </div>
