thêm cột từ chối

--- a/src/app/main/report/contract-number-follow-type/contract-number-follow-type.component.html
+++ b/src/app/main/report/contract-number-follow-type/contract-number-follow-type.component.html
@@ -76,6 +76,7 @@
                             <td>{{list.value.total}}</td>
                             <td>{{list.value.processed}}</td>
                             <td>{{list.value.processing}}</td>
+                            <td>{{list.value.rejected}}</td>
                             <td>{{list.value.canceled}}</td>
                             <td>{{list.value.prepare_expires}}</td>
                             <td>{{list.value.expired}}</td>
@@ -89,6 +90,7 @@
                     <td>{{this.total.total}}</td>
                     <td>{{this.total.processed}}</td>
                     <td>{{this.total.processing}}</td>
+                    <td>{{this.total.rejected}}</td>
                     <td>{{this.total.canceled}}</td>
                     <td>{{this.total.prepare_expires}}</td>
                     <td>{{this.total.expired}}</td>
