bỏ tìm kiếm theo trạng thái với báo cáo số lượng theo loại hợp đồng

--- a/src/app/main/report/contract-number-follow-type/contract-number-follow-type.component.html
+++ b/src/app/main/report/contract-number-follow-type/contract-number-follow-type.component.html
@@ -27,7 +27,7 @@
         </div>
 
         <!--Trạng thái-->
-        <div class="col-md-2">
+        <!-- <div class="col-md-2">
             <div>{{'contract.status' | translate}}</div>
             <div class="input-line">
                 <p-dropdown 
@@ -41,7 +41,7 @@
                     [(ngModel)] = "contractStatus"
                 ></p-dropdown>
             </div>
-        </div>
+        </div> -->
 
         <!--Button-->
         <div class="col-md-6 btn_search">
