--- a/src/app/main/contract-signature/contract-signature.component.html
+++ b/src/app/main/contract-signature/contract-signature.component.html
@@ -700,20 +700,9 @@
       </div>
     </div>
 
-    <!-- <div id="export-html-image" style="position: relative">
-        <img style="position: absolute; top: -5px; left: 0; width: 50%; z-index: -10" [src]="srcMark" alt="logo">
-        <div style="min-height: 80px; display: flex; font-size: 9px; margin-left: 30px;z-index: 2;">
-            <div class="signature-content" style="color: #4FC123; background-size: 40px 40px">
-                <div style="text-align: left;">{{'user.sign-type' | translate}}: {{ 'sign_by_token'| translate}}</div>
-                <div style="text-align: left;">{{'sign.by' | translate}}: {{nameCompany}}</div>
-                <div style="text-align: left;">{{'sign.day' | translate }}: {{isDateTime | date: 'dd/MM/YYYY HH:mm'}}</div>
-            </div>
-        </div>
-    </div> -->
-
     <div class="signature-container" id="export-html-image" style="width: 250px;min-height: 80px; display: flex; font-size: 9px;max-width: 300px">
         <div style="position: relative;">
-            <img [src]="this.srcMark" style="width: 70%; height: 100%;z-index: 1">
+            <img [src]="this.srcMark" style="width: 70%; height: 100%;z-index: 1; object-fit: contain">
         </div>
         <div class="signature-content" style="color: #4FC123; background-size: 40px 40px; display: flex; justify-content: space-between;align-items: center; width: 100%;">
             <div style="width: 165px;">
@@ -733,20 +722,9 @@
       </div>
     </div>
 
-    <!-- <div id="export-html-hsm-image" style="position: relative">
-        <img style="position: absolute; top: -5px; left: 0; width: 50%; z-index: -10" [src]="srcMark" alt="logo">
-        <div style="min-height: 80px; display: flex; font-size: 9px; margin-left: 30px;z-index: 2;">
-            <div class="signature-content" style="color: #4FC123; background-size: 40px 40px">
-                <span style="text-align: left; white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">{{'user.sign-type' | translate}}: {{'sign_by_hsm' | translate}}</span>
-                <span style="text-align: left; white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">{{'tax_code' | translate}}: {{nameCompany}}</span>
-                <span style="text-align: left;white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">{{'sign.day' | translate}}: {{isDateTime | date: 'dd/MM/YYYY HH:mm'}}</span>
-            </div>
-        </div>
-    </div> -->
-
     <div class="signature-container" id="export-html-hsm-image" style="width: 250px;min-height: 80px; display: flex; font-size: 9px;max-width: 300px">
         <div style="position: relative;">
-            <img [src]="this.srcMark" style="width: 70%; height: 100%;z-index: 1">
+            <img [src]="this.srcMark" style="width: 70%; height: 100%;z-index: 1;object-fit: contain;">
         </div>
         <div class="signature-content" style="color: #4FC123; background-size: 40px 40px; display: flex; justify-content: space-between;align-items: center; width: 100%;">
             <div style="width: 165px;">
