fix lỗi đóng dấu khí ký trên mobile

--- a/src/app/main/contract-signature/components/consider-contract/consider-contract.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/consider-contract.component.html
@@ -168,7 +168,7 @@
     </div>
 
     <div style="position: absolute;top: -1000px">
-      <app-display-digital-signature [nameCompany]="nameCompany" [cardId]="cardId" [phonePKI]="phonePKI"></app-display-digital-signature>
+      <app-display-digital-signature [nameCompany]="nameCompany" [cardId]="cardId" [phonePKI]="phonePKI" [srcMark]="srcMark"></app-display-digital-signature>
     </div>
 
     <div class="flex-column" *ngIf="![2,3].includes(recipient.status)" style="margin-top: 5px">
