--- a/src/app/main/contract-signature/contract-signature.component.html
+++ b/src/app/main/contract-signature/contract-signature.component.html
@@ -21,7 +21,7 @@
                 </div>
             </div>
 
-            <div *ngIf="this.typeDisplay === 'signMany'" style="padding-top: 15px;">
+            <div *ngIf="this.typeDisplay === 'signMany'" style="padding-top: 10px;">
                 <button class="btn_submit" (click)="signManyContract()">{{'contract.sign'| translate}}</button>
 
                 <button class="btn_submit" (click)="cancelSignMany()">{{'cancel'| translate}}</button>
@@ -42,6 +42,7 @@
 
             <div *ngIf="this.typeDisplay === 'downloadMany'" style="padding-top: 10px;">
                 <button class="btn_submit" (click)="downloadManyContract()">{{'contract.down'| translate}}</button>
+
                 <button class="btn_submit" (click)="cancelDownloadMany()">{{'cancel'| translate}}</button>
             </div>
         </div>
@@ -57,7 +58,7 @@
         <div class="col-md-5"></div>
         <div class="col-md-2">{{'create-date' | translate}}</div>
         <div class="col-md-2">{{'expiration-date' | translate}}</div>
-        <div *ngIf="this.typeDisplay === 'signOne'" class="col-md-3">{{'action' | translate}}</div>
+        <div *ngIf="this.typeDisplay === 'signOne'" class="col-md-2">{{'action' | translate}}</div>
 
         <!--Nút tick all-->
         <div *ngIf="this.typeDisplay === 'signMany'" class="col-md-3">
@@ -75,7 +76,6 @@
         <div *ngIf="filter_status == -1" class="col-md-1">
             <input id="allDownload" name="allDownload" type="checkbox" [(ngModel)]="checkedAll" (click)="toggleDownloadShare(checkedAll)" />
         </div>
-
     </div>
 
     <!--Danh sách tất cả hợp đồng cần ký trường hợp ký một-->
@@ -226,7 +226,7 @@
                     <div class="col-md-2 item_icon">
                         <div style="display: flex; justify-content: center;">
                             <div class="div_icon">
-                                <img src="../../assets/img/icon_download.svg" class="img_icon" ngbTooltip="{{'contract.download2' | translate}}" (click)="downloadContract(item.id);" />
+                                <img src="../../assets/img/icon_download.svg" class="img_icon" ngbTooltip="{{'contract.download' | translate}}" (click)="downloadContract(item.id);" />
                             </div>
                         </div>
                     </div>
@@ -291,7 +291,7 @@
     </div>
      <!--Danh sách tất cả hợp đồng có thể download.multi -->
     <div *ngIf="this.typeDisplay === 'downloadMany'">
-        <div class="item_contract" *ngFor="let item of contractDownloadList | paginate:{itemsPerPage: page, currentPage:p, totalItems: pageTotal}; let index1 = index">
+        <div class="item_contract" *ngFor="let item of contractDownloadList | paginate:{itemsPerPage: pageDownload, currentPage:p, totalItems: pageTotal}; let index1 = index">
             <div *ngIf="filter_status == 4">
                 <div class="row">
                     <div class="col-md-5">
@@ -379,7 +379,7 @@
                             </div>
 
                             <div class="div_icon" *ngIf="this.typeDisplay == 'downloadMany'">
-                                <input id="all" name="all" type="checkbox" [(ngModel)]="item.checked" (click)="toggleOneDownload(item, index1)" />
+                                <input id="allDownload" name="all" type="checkbox" [(ngModel)]="item.checked" (click)="toggleOneDownload(item, index1)" />
                             </div>
                         </div>
                     </div>
@@ -670,7 +670,7 @@
         </div>
     </div>
 
-    <div *ngIf="pageTotal == 0" style="height: 100px;display: table;top: 0;left: 0;width: 100%;text-align: center;margin-top: 100px;">
+    <div *ngIf="pageTotal == 0" style="height: 100px;display: table;top: 0;left: 0;width: 100%;text-align: center;margin-top: 20px;">
         <div style="display: table-cell;vertical-align: middle;">
             <img src="../../../assets/img/empty_data.svg" />
             <div style="color: #94A7C6">{{'no.data' | translate}}</div>
