--- a/src/app/main/customer/customer-detail/customer-detail.component.html
+++ b/src/app/main/customer/customer-detail/customer-detail.component.html
@@ -38,7 +38,7 @@
                                 <div class="label_detail text-color">{{'user.sign-type' | translate}}:&nbsp;
                                 </div>
                                 <div class="input-data">
-                                    <input type="text" value="{{this.signType}}" readonly>
+                                    <input type="text" value="{{this.signType.name}}" readonly>
                                 </div>
                             </div>
                             <div class="participants__name">
@@ -203,7 +203,7 @@
                                 <div class="label_detail text-color">{{'user.sign-type' | translate}}:&nbsp;
                                 </div>
                                 <div class="input-data">
-                                    <input type="text" value="{{d.signType}}" readonly>
+                                    <input type="text" value="{{d.signType != null ? d.signType.name : ('')}}" readonly>
                                 </div>
                             </div>
                             <div class="participants__name">
@@ -253,7 +253,7 @@
                                 <div class="label_detail text-color">{{'user.sign-type' | translate}}:&nbsp;
                                 </div>
                                 <div class="input-data">
-                                    <input type="text" value="{{d.signType}}" readonly>
+                                    <input type="text" value="{{d.signType != null ? d.signType.name : ('')}}" readonly>
                                 </div>
                             </div>
                             <div class="participants__name">
