--- a/src/app/main/contract/contract.component.html
+++ b/src/app/main/contract/contract.component.html
@@ -544,7 +544,7 @@
                 <div class="footer_pagination">
                     <pagination-controls *ngIf="pageTotal > 0;" (pageChange)="p=$event; downloadMany()" previousLabel="" nextLabel=""></pagination-controls>
                 </div>
-                <div class="footer_page_number">{{'chart.number' | translate}}: {{pageStart}} - {{pageEnd}} / {{pageTotal}}
+                <div class="footer_page_number">{{'chart.number' | translate}}: {{this.getPageStartEnd()}} / {{pageTotal}}
                 </div>
             </div>
         </ng-template>
