them chuc nang tim kiem doi tac

--- a/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
@@ -1747,8 +1747,10 @@
 <!-- them doi tac -->
 <div style="display: flex">
   <div style="margin-right: 80px"></div>
-  <div style="display: inline-block; cursor: pointer">
+  <div style="display: flex; cursor: pointer">
     <u class="label text-color" (click)="addPartner()" style="background-color: #FFFFFF">{{'them_doi_tac' |
+      translate}}</u>
+    <u class="label text-color" (click)="addPartner()" style="background-color: #FFFFFF">{{'find.partner' |
       translate}}</u>
   </div>
 </div>
