--- a/src/app/main/contract-signature/shared/model/forward-contract/forward-contract.component.html
+++ b/src/app/main/contract-signature/shared/model/forward-contract/forward-contract.component.html
@@ -8,12 +8,10 @@
     <!--Đăng nhập bằng email/sđt-->
     <div *ngIf="!isReqCardIdToken && datas.role_coordination != 1" class="row">
       <div class="col">
-        <input type="radio" (change)="changeTypeSign($event)" value="email" name="login" [checked]="true" />{{'
-        '}}{{'typeOfSignEmail' | translate}}
+        <input type="radio" (change)="changeTypeSign($event)" value="email" name="login" [checked]="true" />{{''}}{{'typeOfSignEmail' | translate}}
       </div>
       <div class="col">
-        <input type="radio" (change)="changeTypeSign($event)" value="phone" name="login" />{{' '}}{{'typeOfSignPhone' |
-        translate}}
+        <input type="radio" (change)="changeTypeSign($event)" value="phone" name="login" />{{' '}}{{'typeOfSignPhone' |translate}}
       </div>
     </div>
 
@@ -52,6 +50,7 @@
               <div *ngIf="this.locale =='en'" class="btn btn-outline-primary db_icon_english" id="dropdownMenu1"
                 ngbDropdownToggle>{{dropdownButtonText}}</div>
             </div>
+            <!-- check -->
             <div ngbDropdownMenu aria-labelledby="dropdownMenu1" style="min-width: 6rem;">
               <div class="switch-language">
                 <div class="db_icon_vietnam" ngbDropdownItem (click)="this.locale = 'vi'">
