dialog find partner

--- a/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
@@ -1750,7 +1750,7 @@
   <div style="display: flex; cursor: pointer">
     <u class="label text-color" (click)="addPartner()" style="background-color: #FFFFFF">{{'them_doi_tac' |
       translate}}</u>
-    <u class="label text-color" (click)="addPartner()" style="background-color: #FFFFFF">{{'find.partner' |
+    <u class="label text-color" (click)="findPartner()" style="background-color: #FFFFFF">{{'find.partner' |
       translate}}</u>
   </div>
 </div>
