--- a/src/app/main/contract/dialog/add-partner-dialog/add-partner-dialog.component.html
+++ b/src/app/main/contract/dialog/add-partner-dialog/add-partner-dialog.component.html
@@ -1,79 +1,16 @@
+
 <div class="container-fluid">
     <div style="text-align: center; font-weight: bold">
-      <h3 style="color: #106DB6; font-family: inherit;text-transform: uppercase;">{{this.datas.title | translate}}</h3>
+      <h3 style="color: #106DB6; font-family: inherit;text-transform: uppercase;">{{'find.partner' | translate}}</h3>
     </div>
 
-    <div>
-    <p-selectButton [options]="stateOptions" [(ngModel)]="isList" optionLabel="label" optionValue="value" (click)="ngOnInit()"></p-selectButton>
-</div>
-    <form *ngIf="isList=='off'" [formGroup]="addFormUser" class="content" >
-        <div class="row">
-            <div class="col-md-12">
-                <div class="label text-color">Tổ chức</div>
-                <div>
-                    <p-dropdown 
-                        panelStyleClass="font"
-                        appendTo="body"
-                        [options]="orgList" 
-                        formControlName="orgId" 
-                        optionLabel="name" 
-                        optionValue="id" 
-                        placeholder="Chọn tổ chức" 
-                        [filter]="true" 
-                        filterBy="name" 
-                        [showClear]="true"  
-                        (onChange)="getUserByOrg(orgId.value)"
-                        #orgId
-                        ></p-dropdown>
-                </div>
-            </div>
-        </div>
-        <div class="row" style="padding-top: 10px;">
-            <div class="col-md-12">
-                <div class="label text-color">Email <span class="required-title">*</span></div>
-                <div>
-                    <p-multiSelect 
-                        panelStyleClass="font"
-                        appendTo="body"
-                        [options]="userList" 
-                        formControlName="email" 
-                        optionLabel="email" 
-                        optionValue="email" 
-                        placeholder="Chọn email" 
-                        [filter]="true" 
-                        filterBy="email" 
-                        [showClear]="true"  
-                        ></p-multiSelect>
-                </div>
-                <div *ngIf="submittedUser && fUser.email.errors" class="invalid">
-                    <div *ngIf="fUser.email.errors.required">Email không được để trống</div>
-                </div>
-            </div>
-        </div>
-    
-        <div class="row" style="justify-content: center;padding-top: 10px;">
-            <button class="cancel-button" (click)="dialog.closeAll()" type="button">{{'btn.cancel' | translate}}</button>
-            <button class="save-button" (click)="onSubmit()">{{'btn.share' | translate}}</button>
-        </div>
-    </form>
-    <div *ngIf="isList=='on'">
+    <p-selectButton [options]="stateOptions" [(ngModel)]="isOrg" optionLabel="label" optionValue="value" >
+    </p-selectButton>
+
+    <div *ngIf="">
       <div class="row">
         <div class="col-md-12">
             <div class="label text-color">Tổ chức</div>
-            <div>
-                <p-dropdown 
-                    [(ngModel)]="orgId"
-                    panelStyleClass="font"
-                    appendTo="body"
-                    [options]="orgList" 
-                    optionLabel="name" 
-                    optionValue="id"    
-                    placeholder="Chọn tổ chức" 
-                    [filter]="true"   
-                    filterBy="name" 
-                    (onChange)="getDataShareByOrgId()"
-                    ></p-dropdown>
-            </div>
         </div>
       </div>
         <div *ngIf="list.length > 0"  class="row" style="padding-top: 20px;">
@@ -90,16 +27,16 @@
                       <td>{{list.email}}</td>
                       <td>{{list.organization_name}}</td>
                       <td style="text-align: center">
-                        <img src="../../../assets/img/icon_delete.svg" width="16px" style="cursor: pointer;" (click)="deleteShare(list.id)"/>
+                        <img src="../../../assets/img/icon_delete.svg" width="16px" style="cursor: pointer;"/>
                       </td>
                   </tr>
               </ng-template>
-              <!-- <ng-template pTemplate="paginatorleft" let-state>
+              <ng-template pTemplate="paginatorleft" let-state>
                 <span style="color: white !important;">{{'chart.number' | translate}}: {{state.totalRecords > 0 ? state.first+1 : state.first}} - {{(state.first+state.rows)> state.totalRecords ? state.totalRecords : state.first+state.rows}} / {{state.totalRecords}}</span>
               </ng-template>
               <ng-template pTemplate="paginatorright" let-state>
                 <span style="color: #0160AE !important;">{{'chart.number' | translate}}: {{state.totalRecords > 0 ? state.first+1 : state.first}} - {{(state.first+state.rows)> state.totalRecords ? state.totalRecords : state.first+state.rows}} / {{state.totalRecords}}</span>
-              </ng-template>  -->
+              </ng-template> 
             </p-table>
           </div>
         
